fixed modal being too tall for window

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,17 @@ footer * {
   margin:0 auto -2em;
 }
 
+.modal {
+  overflow: none;
+  overflow-y: none;
+}
 
+
+
+.modal .modal-body {
+    max-height: 420px;
+    overflow-y: auto;
+}
 
 
 
